fixed overflow issue on tooltips

--- a/src/main/cool/src/assets/css/cool-custom.css
+++ b/src/main/cool/src/assets/css/cool-custom.css
@@ -701,6 +701,7 @@ th.ui-sortable-column.ng-star-inserted {
 .cool.cui .view-item-details tbody tr {
   width: 100%;
   display: block;
+  overflow: visible;
 }
 .cool.cui .view-item-details tbody th {
   background: transparent;
